--- a/2_example/1/□と○/style.css
+++ b/2_example/1/□と○/style.css
@@ -1,13 +1,12 @@
 .transition {
   transition: all 1s;
 }
-
 .square {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   background: black;
 }
 
 .rounded {
-  border-radius: 50%;
+  border-radius: 50px;
 }
