--- a/1_workspace/1/□と○/style.css
+++ b/1_workspace/1/□と○/style.css
@@ -13,7 +13,9 @@
 }
 
 .triangle {
-  border-left: 50px;
-  border-right: 50px;
-  border-bottom: 50px;
+  width: 0;
+  height: 0;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid black;
 }
